--- a/tutorial5/CMakeLists.txt
+++ b/tutorial5/CMakeLists.txt
@@ -3,19 +3,21 @@
 
 if( WIN44 )
 
-    message( "Building tutorial 4 - windows" )
+    message( "Building tutorial 5 - windows" )
     add_executable( main_5.exe main_5.cpp )
 
 elseif( UNIX AND NOT APPLE )
 
-    message( "Building tutorial 4 - linux" )
+    message( "Building tutorial 5 - linux" )
     add_executable( main_5.out 
                     main_5.cpp 
                     LWindow.cpp 
                     LShaderManager.cpp
                     LVertexBuffer.cpp
                     LIndexBuffer.cpp
-                    LVertexArray.cpp )
+                    LVertexArray.cpp
+                    LMesh.cpp
+                    LMeshBuilder.cpp )
 
     target_link_libraries( main_5.out
                            ${OPENGL_LIBRARIES} 
@@ -27,6 +29,6 @@ elseif( UNIX AND NOT APPLE )
 
 elseif( APPLE )
 
-    message( "Building tutorial 4 - macOS" )
+    message( "Building tutorial 5 - macOS" )
 
 endif()
