--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ add_subdirectory( tutorial1 )
 add_subdirectory( tutorial2 )
 add_subdirectory( tutorial3 )
 add_subdirectory( tutorial4 )
+add_subdirectory( tutorial5 )
 
 
 
