--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ add_subdirectory( tutorial2 )
 add_subdirectory( tutorial3 )
 add_subdirectory( tutorial4 )
 add_subdirectory( tutorial5 )
-
+add_subdirectory( tutorial6 )
 
 
 
