--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ elseif( UNIX AND NOT APPLE )
 
     find_package( OpenGL REQUIRED )
     find_package( GLEW REQUIRED )
+    find_package( GLUT REQUIRED )
     find_package( X11 REQUIRED )
     find_package( Threads REQUIRED )
     find_package( PkgConfig REQUIRED )
